- Fixed bug #42789 (join() warning messages are not proper & different   return value on php5/6) # For consistency between 5/6 also made the return value be NULL like it # has been for ages when invalid stuff is passed.